tests/neg/i20127.check
-- [E172] Type Error: tests/neg/i20127.scala:13:9 ----------------------------------------------------------------------
13 |  Foo.foo        // error
   |         ^
   |         foo!
-- [E172] Type Error: tests/neg/i20127.scala:14:14 ---------------------------------------------------------------------
14 |  FooClone.foo   // error
   |              ^
   |              foo!
